1.3.14: May 5, 2008
 * Fixed a database indexing bug that prevented notes with really long (~2700+
   character) titles from saving correctly.
 * Changed the literal quotation character in the starting wiki note to the
   "&quot;" character entity so it doesn't show up as a change in the diff.

1.3.13: May 5, 2008
 * Instructions for enabling JavaScript, linked from various forms that
   require it.

1.3.12: May 3, 2008:
 * Fixed yet another diff-breaking edge case. This one had to do with
   inserting italicized text right before some existing italicized text.

1.3.11: May 2, 2008
 * Fixed another bug that prevented diffs from working. This time, those with
   <br/> tags didn't parse correctly.

1.3.10: May 2, 2008
 * Fixed a bug that prevented diffs from working for notes with links.

1.3.9: May 2, 2008
 * When viewing a note's revision, changes since the previous revision are now
   shown in red strikeout (deletions/modifications) and green text
   (additions/modifications).

1.3.8: April 29, 2008
 * Can now load children links for a note that's in the trash.

1.3.7: April 29, 2008
 * Several minor font size and other UI changes.

1.3.6: April 28, 2008
 * Can now click "more" link to display more than ten "recent updates".

1.3.5: April 24, 2008
 * Reducing the number of links in the header by consolidating several into
   one "support" link.

1.3.4: April 24, 2008
 * Better support for RSS feeds of notebooks with unicode names.
 * Now dynamically altering RSS feed link when notebook is renamed.

1.3.3: April 22, 2008
 * RSS subscription support for each wiki notebook.

1.3.2: April 18, 2008
 * New "nothing but notes" mode, allowing you to hide everything on the page
   except for your notes and the toolbar.

1.3.1: April 18, 2008
 * Now if you try to load a page where access is required, and you're not
   logged in, you'll be redirected to a login page. After you login, you'll
   be redirected to the page you were originally trying to access.