@@ -3,6 +3,8 @@
    character) titles from saving correctly.
  * Changed the literal quotation character in the starting wiki note to the
    "&quot;" character entity so it doesn't show up as a change in the diff.
+ * Fixed a bug where attempting to load a notebook preview without access
+   would give a "list index out of range" error instead of an access error.
 
 1.3.13: May 5, 2008
  * Instructions for enabling JavaScript, linked from various forms that
